--- a/static/style.css
+++ b/static/style.css
@@ -111,6 +111,9 @@ main {
 
 .form-btn {
     background-color: blue;
+    grid-column: second;
+    color: white;
+    font-size: 1.75rem;
 }
 /* Flash Messages Styles */
 .error {
@@ -127,4 +130,28 @@ main {
     background-color: yellow;
     color: black;
     font-size: 2.5rem;
+}
+
+/* Currency Codes Page */
+.code-wrapper {
+    width: 80vw;
+    min-width: 20rem;
+    height: fit-content;
+    min-height: 20rem;
+    padding: 0.5rem;
+    display: grid;
+    grid-gap: 0.8rem;
+    justify-content: stretch;
+    align-items: stretch;
+    grid-template-columns: 
+    [first] 1fr
+    [second] 1fr
+    [third] 1fr;
+    grid-template-rows: 
+    [inputs] 1fr
+    [button] 1fr;
+    grid-auto-flow: row;
+    background-color: goldenrod;
+    border: 0.1rem solid blue;
+    border-radius: 0.3rem;
 }
